Footer Logos Added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
             </div>
         </form>
         <footer>
-
+            <img src="./assets/amazonlogo.png.png" alt="Amazon Icon" height="32" width="32" />
+            <img src="./assets/facebook.png.png" alt="Facebook Icon" height="32" width="32" />
+            <img src="./assets/gitHublogo.png.png" alt="GitHub Icon" height="32" width="32" />
+            <img src="./assets/instagramlogo.png.png" alt="Instagram Icon" height="32" width="32" />
+            <img src="./assets/slacklogo.png.png" alt="Slack Icon" height="32" width="32" />
         </footer>
     </div>
 </body>
