Personal style changes

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                 />
             </div>
             <div>
+                <input type="text"
+                placeholder="Favorite food"
+                name="Favorit food"
+                required>
+            </div>
+            <div>
                 <button type="submit">Submit</button>
             </div>
         </form>
